# cse_210033

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
conf/: config.cfg
cse_210033/: __init__.py  utils.py
cse_210033/cohort_selection/: __init__.py  cohort_selection.py
cse_210033/cohort_selection/utils/: add_events.py  filter_events.py  prepare_df.py
cse_210033/statistical_analysis/: __init__.py  statistical_analysis.py
cse_210033/statistical_analysis/utils/: __init__.py  complete_source.py  key_variables.py  supplementary_variables.py
cse_210033/viz/: __init__.py  plot_ehr_context.py  plot_ehr_models.py  plot_ehr_rectangle_model.py  plot_epidemiology_indicators.py  plot_model_goodness_fit.py  plot_quality_indicators.py  plot_sensibility_care_site.py  summary_tables.py  utils.py
notebooks/: generate_figures.md  report.html  report.md
scripts/: cohort_selection.py  ehr_modeling.py  generate_figures.py  statistical_analysis.py
