[tool.poetry]
name = "cse_210033"
version = "1.0.0"
description = "Presentation and evaluation of eds-temporal-variability for the correction of deployment bias in the Greater Paris Hospital's Data Warehouse"
authors = ["Adam <adam.remaki@aphp.fr>"]

[tool.poetry.dependencies]
python = "~3.7.1"
edsteva = "0.2.4"
pandas = "^1.3"
altair = "^5.0"
numpy = "<1.20.0" # https://github.com/databricks/koalas/pull/2166
loguru = "0.7.0"
statsmodels = "0.13.5"
rich = "^12.6.0"
typer = "0.4.2"
confection = "0.0.4"
polars = "^0.17.1"
catalogue = "^2.0.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"
jupyter-black = "0.3.4"
jupytext = "^1.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
